<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/encabezado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen_pantalla"
        android:layout_marginTop="@dimen/margen_pantalla"
        android:layout_marginEnd="@dimen/margen_pantalla"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_portada"
            android:layout_width="@dimen/portada_ancho"
            android:layout_height="@dimen/portada_alto"
            android:contentDescription="@string/desc_portada"
            android:scaleType="centerCrop"
            android:src="@drawable/portada_juego"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/espacio_grande"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_titulo_juego"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/juego_titulo"
                android:textColor="@color/texto_primario"
                android:textSize="@dimen/texto_titulo"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/espacio_chico"
                android:text="@string/juego_desarrollador_anio"
                android:textColor="@color/texto_secundario"
                android:textSize="@dimen/texto_cuerpo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/juego_genero"
                android:textColor="@color/texto_secundario"
                android:textSize="@dimen/texto_cuerpo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/juego_plataformas"
                android:textColor="@color/texto_secundario"
                android:textSize="@dimen/texto_cuerpo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/espacio_chico"
                android:text="@string/juego_horas"
                android:textColor="@color/acento"
                android:textSize="@dimen/texto_cuerpo"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/espacio_chico"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etiqueta_estado"
                    android:textColor="@color/texto_secundario"
                    android:textSize="@dimen/texto_cuerpo"/>

                <TextView
                    android:id="@+id/tv_estado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/espacio_chico"
                    android:text="@string/estado_jugando"
                    android:textColor="@color/estado_jugando"
                    android:textSize="@dimen/texto_cuerpo"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_sinopsis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen_pantalla"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/margen_pantalla"
        android:ellipsize="end"
        android:lineSpacingExtra="@dimen/interlineado"
        android:maxLines="3"
        android:text="@string/juego_sinopsis"
        android:textColor="@color/texto_secundario"
        android:textSize="@dimen/texto_cuerpo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/encabezado" />

    <LinearLayout
        android:id="@+id/botones_estado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen_pantalla"
        android:layout_marginTop="@dimen/espacio_medio"
        android:layout_marginEnd="@dimen/margen_pantalla"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sinopsis">

        <Button
            android:id="@+id/btn_jugando"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/espacio_chico"
            android:layout_weight="1"
            android:backgroundTint="@color/superficie"
            android:maxLines="1"
            android:paddingStart="@dimen/padding_boton"
            android:paddingEnd="@dimen/padding_boton"
            android:text="@string/estado_jugando"
            android:textColor="@color/estado_jugando"
            android:textSize="@dimen/texto_boton"/>

        <Button
            android:id="@+id/btn_completado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/espacio_chico"
            android:layout_weight="1"
            android:backgroundTint="@color/superficie"
            android:maxLines="1"
            android:paddingStart="@dimen/padding_boton"
            android:paddingEnd="@dimen/padding_boton"
            android:text="@string/estado_completado"
            android:textColor="@color/estado_completado"
            android:textSize="@dimen/texto_boton"/>

        <Button
            android:id="@+id/btn_pausado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/espacio_chico"
            android:layout_weight="1"
            android:backgroundTint="@color/superficie"
            android:maxLines="1"
            android:paddingStart="@dimen/padding_boton"
            android:paddingEnd="@dimen/padding_boton"
            android:text="@string/estado_pausado"
            android:textColor="@color/estado_pausado"
            android:textSize="@dimen/texto_boton"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/fila_titulo_bitacora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen_pantalla"
        android:layout_marginTop="@dimen/espacio_grande"
        android:layout_marginEnd="@dimen/margen_pantalla"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botones_estado">

        <TextView
            android:id="@+id/tv_titulo_bitacora"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titulo_bitacora"
            android:textColor="@color/texto_primario"
            android:textSize="@dimen/texto_subtitulo"
            android:textStyle="bold"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_bitacora"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margen_pantalla"
        android:layout_marginTop="@dimen/espacio_medio"
        android:layout_marginEnd="@dimen/margen_pantalla"
        android:layout_marginBottom="@dimen/espacio_medio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fila_titulo_bitacora">

        <LinearLayout
            android:id="@+id/contenedor_entradas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>